data_model/derive/tests/ui_fail/transparent_api_private_item.stderr
error[E0603]: struct `BlockPayload` is private
 --> tests/ui_fail/transparent_api_private_item.rs:1:30
  |
1 | use iroha_data_model::block::BlockPayload;
  |                              ^^^^^^^^^^^^ private struct
  |
note: the struct `BlockPayload` is defined here
 --> $WORKSPACE/data_model/src/block.rs
  |
  | pub use self::model::*;
  |         ^^^^^^^^^^^
